--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^7.0.2"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^3.11.2",
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
