--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "bihinkanrisuru-zo-web",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "eslint . --fix",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,11 +18,13 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.11.2",
+    "@eslint-react/eslint-plugin": "^1.19.0",
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.15.0",
+    "eslint-plugin-format": "^0.1.3",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
